# beacon

./: .gitignore  Pipfile  README.md  ecosystem.config.js  package-lock.json  package.json  pyproject.toml
bacnet/: index.py  vendors.json
dev-ops/: bootstrap.sh  install-project.sh  sudo-bootstrap.sh  user-bootstrap.sh
