[tool.poetry]
name = "beacon"
version = "0.1.0"
description = ""
authors = ["Dynamix Energy Services"]

[tool.poetry.dependencies]
python = "^3.8"
astroid = "^2.4.2"
bacpypes = "^0.18.1"
bac0 = "^20.2.20"
netifaces = "^0.10.9"
tornado = "^6.0.4"
netaddr = "^0.8.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
