[tool.poetry]
name = "beacon"
version = "0.1.0"
description = ""
authors = ["Dynamix Energy Services"]

[tool.poetry.dependencies]
python = "^3.8"
astroid = "^2.4.2"
bacpypes = "^0.18.1"
bac0 = "^20.2.20"
netifaces = "^0.10.9"
netaddr = "^0.8.0"
tinydb = "^4.1.1"
sanic = "^20.6.3"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
